log
Mon 24 Apr 2023 03:01:13 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
df370c2
Mon 24 Apr 2023 03:22:07 PM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|0
35657e4
Mon 24 Apr 2023 03:22:40 PM UTC: 
 treemap.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  4|7
total_score: 5/70
1069825
Mon 24 Apr 2023 03:23:23 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
2a206bd
Mon 24 Apr 2023 03:35:31 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  4|7
total_score: 5/70
f9cd404
Mon 24 Apr 2023 03:48:49 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
c03864f
Mon 24 Apr 2023 03:50:42 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
250983e
Mon 24 Apr 2023 03:53:59 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
fab48ff
Mon 24 Apr 2023 03:56:56 PM UTC: 
 treemap.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
 tests:  4|7
total_score: 5/70
afc4461
Mon 24 Apr 2023 04:04:58 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
13dfc31
Mon 24 Apr 2023 04:09:20 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
de1014c
Mon 24 Apr 2023 04:28:11 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  0|0
55f2ee7
Mon 24 Apr 2023 04:28:34 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  11|6
total_score: 15/70
22f839c
Mon 24 Apr 2023 04:29:38 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  11|6
total_score: 15/70
cca66e5
Mon 24 Apr 2023 05:10:28 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
83a9083
Mon 24 Apr 2023 05:10:52 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  11|6
total_score: 15/70
0471876
Tue 25 Apr 2023 03:10:09 PM UTC: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
f532c27
Tue 25 Apr 2023 03:14:26 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:73:9: error: ‘true’ undeclared (first use in this function)
   73 |   while(true)
      |         ^~~~
treemap.c:5:1: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    4 | #include "treemap.h"
  +++ |+#include <stdbool.h>
    5 | 
treemap.c:73:9: note: each undeclared identifier is reported only once for each function it appears in
   73 |   while(true)
      |         ^~~~
treemap.c:79:1: error: control reaches end of non-void function [-Werror=return-type]
   79 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9e194c4
Tue 25 Apr 2023 03:15:00 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 15/70
25c9695
Tue 25 Apr 2023 03:22:32 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  13|5
total_score: 15/70
c69dad1
Tue 25 Apr 2023 03:25:37 PM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  14|5
total_score: 15/70
61b625f
Tue 25 Apr 2023 03:26:57 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  14|5
total_score: 15/70
63a962d
Tue 25 Apr 2023 03:27:32 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  15|4
total_score: 25/70
d7e391c
Tue 25 Apr 2023 03:45:38 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:100:19: error: statement with no effect [-Werror=unused-value]
  100 |     tree->current == NULL;
      |                   ^
cc1: all warnings being treated as errors
Compilation failed
f8194a2
